Fixed info icon and screen alignment

--- a/src/components/passwordGenerator/PasswordGenerator.css
+++ b/src/components/passwordGenerator/PasswordGenerator.css
@@ -176,11 +176,17 @@
     color: black;
     padding: 1rem;
     border-radius: 5px;
-    opacity: 0;
+    opacity: 0.6;
+    display: none;
     z-index: 999;
-    font-family: "Comic Sans MS", cursive, sans-serif;
+    font-family: "Comic Sans MS", sans-serif;
     font-size: 12px;
-    transition: all 0.4s;
+    transition: display 1s;
+    right: -100%
+}
+
+.pop-modal:hover {
+    opacity: 1;
 }
 
 .pop-modal::before {
@@ -193,7 +199,7 @@
 45deg
 );
     top: -13%;
-    left: 4%;
+    right: 9%;
 }
 
 .slider-container {
